--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-hello nelly, hello büni, hello anais, hello intes
-
-oops ines meini 
-
-ich chan eu all helfe imfall
-
+---
+layout: home
+title: My website
+subtitle: This is where I will tell my friends way too much about me
+---
