--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 ---
 layout: home
-title: datadriven.space
-subtitle: Current State of Data Driven Business in Swiss Startups
+title: Current State of Data Driven Business in Swiss Startups
+subtitle: Study
 ---
+
+Welcome to my research website.
+
+I'm currently working on my master's thesis and I will publish the results on this page.
+If you work for a Swiss Startup you can participate in this survey under this link: https://immzhaw.eu.qualtrics.com/jfe/form/SV_9nyvH1HZET1POK2 
