--- a/index.html
+++ b/index.html
@@ -8,6 +8,5 @@ Welcome to my research website.
 
 I'm currently working on my master's thesis and I will publish the results on this page.
 
-If you work for a Swiss Startup you can participate in this survey under this link: 
-[https://immzhaw.eu.qualtrics.com/jfe/form/SV_9nyvH1HZET1POK2](https://immzhaw.eu.qualtrics.com/jfe/form/SV_9nyvH1HZET1POK2/)  
-[take 5 minutes to learn how to write in markdown](https://markdowntutorial.com/) 
+If you work for a Swiss Startup you can participate in this survey under this link:
+[Link](https://immzhaw.eu.qualtrics.com/jfe/form/SV_9nyvH1HZET1POK2/)
