--- a/index.html
+++ b/index.html
@@ -10,4 +10,4 @@ I'm currently working on my master's thesis and I will publish the results on th
 
 If you work for a Swiss Startup you can participate in this survey under this link:
 
-[https://immzhaw.eu.qualtrics.com/jfe/form/SV_9nyvH1HZET1POK2](https://immzhaw.eu.qualtrics.com/jfe/form/SV_9nyvH1HZET1POK2/)
+<a href="https://immzhaw.eu.qualtrics.com/jfe/form/SV_9nyvH1HZET1POK2/">https://immzhaw.eu.qualtrics.com/jfe/form/SV_9nyvH1HZET1POK2/</a> 
