--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@ title: Welcome
 subtitle: Current State of Data Driven Business in Swiss Startups
 ---
 
-Welcome to my research website.
-<br>
-I'm currently working on my master's thesis and I will publish the results on this page.
-<br>
-If you work for a Swiss Startup you can participate in this survey under this link:
-<br>
-<a href="https://immzhaw.eu.qualtrics.com/jfe/form/SV_9nyvH1HZET1POK2/">https://immzhaw.eu.qualtrics.com/jfe/form/SV_9nyvH1HZET1POK2/</a> 
+<p>Welcome to my research website.</p>
+<p>I&apos;m currently working on my master&apos;s thesis and I will publish the results on this page.&nbsp;</p>
+<p>If you work for a Swiss Startup you can participate in this survey under this link:</p>
+<p><a href="http://Survey Link" rel="noopener noreferrer" target="_blank">https://immzhaw.eu.qualtrics.com/jfe/form/SV_9nyvH1HZET1POK2/</a></p>
