--- a/index.html
+++ b/index.html
@@ -3,5 +3,4 @@ layout: home
 title: Welcome
 subtitle: Current State of Data Driven Business in Swiss Startups
 ---
-
-<p style="text-align: center;">Welcome to my research website.<br>I&apos;m currently working on my master&apos;s thesis and I will publish the results on this page. <br>If you work for a Swiss Startup you can participate in this survey under this link:<a href="http://Survey Link" target="_blank" rel="noopener noreferrer"></a><br><a href="http://Survey Link" rel="noopener noreferrer" target="_blank">https://immzhaw.eu.qualtrics.com/jfe/form/SV_9nyvH1HZET1POK2/</a></p>
+<p style="text-align: center;">Welcome to my research website.<br>I&apos;m currently working on my master&apos;s thesis and I will publish the results on this page. <br>If you work for a Swiss Startup you can participate in this survey under this link:<a href="http://Survey Link" target="_blank" rel="noopener noreferrer"></a><br><a href="https://immzhaw.eu.qualtrics.com/jfe/form/SV_9nyvH1HZET1POK2/" rel="noopener noreferrer" target="_blank">Survey Link</a></p>
